src/test/ui/parser/issue-43692.rs
// compile-flags: -Z parse-only

fn main() {
    '\u{_10FFFF}'; //~ ERROR invalid start of unicode escape
}
